--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@ai-sdk/langchain": "^1.0.75",
     "@ai-sdk/react": "^2.0.74",
     "@auth0/ai-langchain": "^4.0.0",
     "@auth0/nextjs-auth0": "^4.10.0",
